# pogo

./: .gitignore  LICENSE  README.md  gcaci.py  pogo.py  pyproject.toml  upocp.py  utils.py
mimic/: generate_figures.py  run_experiment.py  test_predictions_50.csv  viz_results.ipynb
stocks/: forecast.py  generate_figures.py  getSandP.py  playground.ipynb  run_experiment.py  viz_results.ipynb
stocks/data/processed_data/: AAPL_forecast.csv  BA_forecast.csv  DAL_forecast.csv  META_forecast.csv  MRNA_forecast.csv  NVDA_forecast.csv  UAL_forecast.csv
stocks/data/raw_data/: AAPL_data.csv  BA_data.csv  DAL_data.csv  META_data.csv  MRNA_data.csv  NVDA_data.csv  UAL_data.csv
synthetic/: dataset.py  exp_registry.py  generate_figures.py  run_all.py  runner.py  viz_results.ipynb
