[project]
name = "pogo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "prophet>=1.3.0",
    "scienceplots>=2.2.1",
    "tqdm>=4.67.3",
    "yfinance>=1.4.1",
]
